--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
+  <title>MHIA Campus Management</title>
   </head>
   <body>
     <div id="main"></div>
-    <script async defer src="/bundle.js"></script>    
+    <script async defer src="/bundle.js"></script>
   </body>
 </html>
